--- a/Cloppers.html
+++ b/Cloppers.html
@@ -185,7 +185,7 @@
 									</div>
 								</div>
 								<div class="image">
-									<img src="img\Xnextmin.png">
+									<img src="img\Clopers\AFBLover\9.png">
 								</div>
 							</div></a>
 						</div>
@@ -274,6 +274,9 @@
                   <li>
                       <a href="Cloppers.html">Стать Клоппером!</a>
                   </li>
+				  <li>
+					<a href="Project.html">Проект Xtaraz_Twilight_Forever</a>
+				</li>
               </ul>
               <p>Xtaraz_Twilight_Forever</p>
           </div>
