--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/fontAwesome.css">
         <link rel="stylesheet" href="css/light-box.css">
         <link rel="stylesheet" href="css/templatemo-style.css">
-
+		<link rel="shortcut icon" href="img/XtaraziC.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Kanit:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -23,7 +23,7 @@
 
     <nav>
         <div class="logo">
-            <a href="index.html"><em>xtaraz</em> Twilight <em>Forever</em></a>
+           <img src="img/XtaraziC.ico" style="width: 20%; height: 20%;" alt=""> <a href="index.html"><em> 	xtaraz</em> Twilight <em>Forever</em></a>
         </div>
         <div class="menu-icon">
         <span></span>
@@ -3373,6 +3373,9 @@
                   <li>
                       <a href="Cloppers.html">Стать Клоппером!</a>
                   </li>
+				  <li>
+					<a href="Project.html">Проект Xtaraz_Twilight_Forever</a>
+				</li>
               </ul>
               <p>Xtaraz_Twilight_Forever</p>
           </div>
@@ -3387,12 +3390,11 @@
     
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-
 	<script src='http://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/DrawSVGPlugin.js?r=12'></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/utils/Draggable.min.js'></script>
 	<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ThrowPropsPlugin.min.js'></script>
-	
+	<script type="text/javascript" src="js/Pony/basecfg.js" id="browser-ponies-config"></script><script type="text/javascript" src="js/Pony/browserponies.js" id="browser-ponies-script"></script><script type="text/javascript">/* <![CDATA[ */ (function (cfg) {BrowserPonies.setBaseUrl(cfg.baseurl);BrowserPonies.loadConfig(BrowserPoniesBaseConfig);BrowserPonies.loadConfig(cfg);})({"baseurl":"https://panzi.github.io/Browser-Ponies/","fadeDuration":500,"volume":0,"fps":25,"speed":3,"audioEnabled":false,"showFps":false,"showLoadProgress":true,"speakProbability":0.1,"spawn":{"twilight sparkle":1 },"autostart":true}); /* ]]> */</script>
     
 </body>
 </html>
