--- a/index.html
+++ b/index.html
@@ -3351,7 +3351,7 @@
                       <h1 style="color: #fff;">Вк: <a href="https://vk.com/xtaraz_twilight_forever">https://vk.com/xtaraz_twilight_forever</a></h1>
 						<br />
 			    <h1>https://vk.com/xtaraz_twilight_forever</h1>
-					  <img src="img/xtaraz.png" alt="С*ка х*ли не робим?"> 
+					  <img src="xtaraz.png" alt="С*ка х*ли не робим?"> 
 					   
                     </div>
                 </div>
