--- a/Cloppers.html
+++ b/Cloppers.html
@@ -49,218 +49,9 @@
         </video>
     </div>
 
-<h1><center>Над Дружбой Ревет Любовь</center></h1>
-    <div class="full-screen-portfolio" id="portfolio">
-        <div class="container-fluid">
-			<div class="full-screen-portfolio" id="portfolio">
-				<div class="container-fluid">
-					<div class="col-md-4 col-sm-6">
-						<div class="portfolio-item">
-							<a href="img\Clopers\AFBLover\Big\1.png" data-lightbox="image-1"><div class="thumb">
-								<div class="hover-effect">
-									<div class="hover-content">
-										<h1>1 <em>Страница</em></h1>
-										<p></p>
-									</div>
-								</div>
-								<div class="image">
-									<img src="img\Clopers\AFBLover\1.png">
-								</div>
-							</div></a>
-						</div>
-					</div>
-		
-					<div class="col-md-4 col-sm-6">
-						<div class="portfolio-item">
-							<a href="img\Clopers\AFBLover\Big\2.png" data-lightbox="image-1"><div class="thumb">
-								<div class="hover-effect">
-									<div class="hover-content">
-										<h1>2 <em>Страница</em></h1>
-										<p></p>
-									</div>
-								</div>
-								<div class="image">
-									<img src="img\Clopers\AFBLover\2.png">
-								</div>
-							</div></a>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="portfolio-item">
-							<a href="img\Clopers\AFBLover\Big\3.png" data-lightbox="image-1"><div class="thumb">
-								<div class="hover-effect">
-									<div class="hover-content">
-										<h1>3 <em>Страница</em></h1>
-										<p></p>
-									</div>
-								</div>
-								<div class="image">
-									<img src="img\Clopers\AFBLover\3.png">
-								</div>
-							</div></a>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="portfolio-item">
-							<a href="img\Clopers\AFBLover\Big\4.png" data-lightbox="image-1"><div class="thumb">
-								<div class="hover-effect">
-									<div class="hover-content">
-										<h1>4 <em>Страница</em></h1>
-										<p></p>
-									</div>
-								</div>
-								<div class="image">
-									<img src="img\Clopers\AFBLover\4.png">
-								</div>
-							</div></a>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="portfolio-item">
-							<a href="img\Clopers\AFBLover\Big\5.png" data-lightbox="image-1"><div class="thumb">
-								<div class="hover-effect">
-									<div class="hover-content">
-										<h1>5 <em>Страница</em></h1>
-										<p></p>
-									</div>
-								</div>
-								<div class="image">
-									<img src="img\Clopers\AFBLover\5.png">
-								</div>
-							</div></a>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="portfolio-item">
-							<a href="img\Clopers\AFBLover\Big\6.png" data-lightbox="image-1"><div class="thumb">
-								<div class="hover-effect">
-									<div class="hover-content">
-										<h1>6 <em>Страница</em></h1>
-										<p></p>
-									</div>
-								</div>
-								<div class="image">
-									<img src="img\Clopers\AFBLover\6.png">
-								</div>
-							</div></a>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="portfolio-item">
-							<a href="img\Clopers\AFBLover\Big\7.png" data-lightbox="image-1"><div class="thumb">
-								<div class="hover-effect">
-									<div class="hover-content">
-										<h1>7 <em>Страница</em></h1>
-										<p></p>
-									</div>
-								</div>
-								<div class="image">
-									<img src="img\Clopers\AFBLover\7.png">
-								</div>
-							</div></a>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="portfolio-item">
-							<a href="img\Clopers\AFBLover\Big\8.png" data-lightbox="image-1"><div class="thumb">
-								<div class="hover-effect">
-									<div class="hover-content">
-										<h1>8 <em>Страница</em></h1>
-										<p></p>
-									</div>
-								</div>
-								<div class="image">
-									<img src="img\Clopers\AFBLover\8.png">
-								</div>
-							</div></a>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="portfolio-item">
-							<a href="img\Clopers\AFBLover\Big\9.png" data-lightbox="image-1"><div class="thumb">
-								<div class="hover-effect">
-									<div class="hover-content">
-										<h1>9 <em>Страница</em></h1>
-										<p></p>
-									</div>
-								</div>
-								<div class="image">
-									<img src="img\Clopers\AFBLover\9.png">
-								</div>
-							</div></a>
-						</div>
-					</div>
-					<div class="secret">
-					<div class="col-md-4 col-sm-6">
-						<div class="portfolio-item">
-							<a href="img\Clopers\AFBLover\Big\10.png" data-lightbox="image-1"><div class="thumb">
-								<div class="hover-effect">
-									<div class="hover-content">
-										<h1>10 <em>Страница</em></h1>
-										<p></p>
-									</div>
-								</div>
-								<div class="image">
-									<img src="img\Clopers\AFBLover\3.png">
-								</div>
-							</div></a>
-						</div>
-					</div>
-            </div>
-		</div>
-		<br />
-		<br />
-		
-    </div>
-	<br />
-	<br />
-	<h1><center>Cкоро....</center></h1>
-
-
-			</div>
-			</div>
-			</div>
-    <footer>
-        <div class="container-fluid">
-            <div class="col-md-12">
-                <p>Xtaraz_Twilight_Forever</p>
-            </div>
-        </div>
-    </footer>
-
-
-      <!-- Modal button -->
-    <div class="popup-icon">
-      <button id="modBtn" class="modal-btn"><img src="img/contact-icon.png" alt=""></button>
-    </div>  
-
-    <!-- Modal -->
-    <div id="modal" class="modal">
-      <!-- Modal Content -->
-      <div class="modal-content">
-        <!-- Modal Header -->
-        <div class="modal-header">
-          <h3 class="header-title">Связаться с <em>Xtaraz Twilight Forever</em></h3>
-          <div class="close-btn"><img src="img/close_contact.png" alt=""></div>    
-        </div>
-        <!-- Modal Body -->
-        <div class="modal-body">
-          <div class="col-md-6 col-md-offset-3">
-            <form id="contact" action="" method="post">
-                <div class="row">
-                    <div class="col-md-12">
-                      <h1 style="color: #fff;">Вк: <a href="https://vk.com/xtaraz_twilight_forever">https://vk.com/xtaraz_twilight_forever</a></h1>
-						<br />
-					  <img src="img/xtaraz.png" alt="С*ка х*ли не робим?"> 
-					   
-                    </div>
-                </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
+<h1><center>Мы не когда этим не будем заниматься</center></h1>
+	<h2><center>Мы не когда не опустимся до этого</center></h2>  
+		<h5><center>I'm sorry, Twi. I didn't want to discredit your image..</center></h5> 
     
 
     <section class="overlay-menu">
